apps/local/website/nginx/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.3-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-nginx
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healcheck
              port: 80
              scheme: HTTP
          livenessProbe:
            tcpSocket:
              port: 80
          resources:
            requests:
              cpu: 100m
              memory: 20Mi
            limits:
              cpu: 200m
              memory: 40Mi
          volumeMounts:
            - name: www-tmp
              mountPath: /code
            - name: config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: www-nfs
          nfs:
            server: nas01.bubylou.com
            path: /srv/k3s/www
            readOnly: true
        - name: www-tmp
          emptyDir: {}
        - name: config
          configMap:
            name: nginx-config
            items:
              - key: config
                path: site.conf
