apps/local/website/nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-nginx
  sessionAffinity: None
  type: ClusterIP
